[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/work/dialoger_game.gd" type="Script" id=1]
[ext_resource path="res://fonts/Minimal5x7S36.tres" type="DynamicFont" id=2]

[node name="dialoger" type="Node2D"]
script = ExtResource( 1 )

[node name="dialog_timer" type="Timer" parent="."]
wait_time = 15.0

[node name="boss_dialog_timer" type="Timer" parent="."]
wait_time = 16.0
autostart = true

[node name="textbox" type="ColorRect" parent="."]
visible = false
margin_left = -200.0
margin_top = -256.0
margin_right = 200.0
color = Color( 0, 0, 0, 0.627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialog" type="Label" parent="textbox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="dialog_timer" to="." method="_on_dialog_timer_timeout"]
[connection signal="timeout" from="boss_dialog_timer" to="." method="_on_boss_dialog_timer_timeout"]
